--- a/Level0/Unit1/index.html
+++ b/Level0/Unit1/index.html
@@ -36,173 +36,77 @@
       touch-action: manipulation;
     }
 
-    /* ====== Barra superior: Back (esq) + Avatar+Nome (dir) ====== */
-    .topbar {
-      position: relative;
-      width: 100%;
-      height: 72px; /* faixa fixa para acomodar avatar+nome e o back */
-    }
+    /* ====== Barra superior ====== */
+    .topbar { position: relative; width: 100%; height: 72px; }
     .back-button {
-      position: absolute;
-      top: 16px; left: 16px;
-      text-decoration: none;
-      background-color: #000;
-      color: #fff;
-      padding: 8px 12px;
-      border-radius: 4px;
-      z-index: 9999;
+      position: absolute; top: 16px; left: 16px;
+      text-decoration: none; background-color: #000; color: #fff;
+      padding: 8px 12px; border-radius: 4px; z-index: 9999;
     }
     .back-button:hover { background-color: #333; }
 
-    /* Avatar + nome (sem caixa) fixo no topo (absolute) */
+    /* Avatar + nome */
     .login-container {
-      position: absolute;
-      top: 12px; right: 14px;
-      z-index: 9999;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 4px;
-      background: none; border: none; box-shadow: none; padding: 0;
-      cursor: pointer;
+      position: absolute; top: 12px; right: 14px; z-index: 9999;
+      display: flex; flex-direction: column; align-items: center; gap: 4px;
+      background: none; border: none; box-shadow: none; padding: 0; cursor: pointer;
     }
-    .user-icon {
-      width: 55px; height: auto; display: block;
-      border: none; border-radius: 0; object-fit: contain;
-      pointer-events: none;
-    }
+    .user-icon { width: 55px; height: auto; display: block; border: none; border-radius: 0; object-fit: contain; pointer-events: none; }
     .user-name {
-      margin: 0; line-height: 1.05; text-align: center;
-      font-size: 13px; font-weight: 700; color: #1a5f34;
+      margin: 0; line-height: 1.05; text-align: center; font-size: 13px; font-weight: 700; color: #1a5f34;
       white-space: nowrap; max-width: 150px; overflow: hidden; text-overflow: ellipsis;
       text-shadow: 0 1px 1px rgba(255,255,255,0.45), 0 1px 2px rgba(0,0,0,0.18);
     }
-
-    /* Dropdown (sem "Leave") */
     .user-dropdown {
-      display: none;
-      flex-direction: column;
-      position: absolute;
-      top: 70px; right: 0;
-      background-color: #fff;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.25);
-      z-index: 9999;
-      overflow: hidden;
-      min-width: 200px;
+      display: none; flex-direction: column; position: absolute; top: 70px; right: 0;
+      background-color: #fff; border: 1px solid #ccc; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.25);
+      z-index: 9999; overflow: hidden; min-width: 200px;
     }
-    .dropdown-item {
-      padding: 10px 16px;
-      color: #333; text-decoration: none; font-size: 14px;
-    }
+    .dropdown-item { padding: 10px 16px; color: #333; text-decoration: none; font-size: 14px; }
     .dropdown-item:hover { background-color: #f0f0f0; }
 
     /* ====== Layout ====== */
     .map-container {
-      width: 100%;
-      position: relative;
-      background-image: url('../../imagens/fundo.png');
-      background-repeat: repeat;
-      background-size: 200%;
-      overflow-y: auto;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+      width: 100%; position: relative; background-image: url('../../imagens/fundo.png');
+      background-repeat: repeat; background-size: 200%; overflow-y: auto;
+      display: flex; flex-direction: column; align-items: center;
     }
+    header { width: 100%; padding: 0; text-align: center; background: none; }
+    .title-container { text-align: center; margin-top: 28px; position: relative; z-index: 2; }
+    .title-container h1 { font-size: 2.5em; color: #4CAF50; font-family: Arial, sans-serif; margin: 0; text-shadow: 1px 1px 2px #000000; }
 
-    header {
-      width: 100%;
-      padding: 0;
-      text-align: center;
-      background: none;
-    }
-
-    /* Espaço maior entre topbar e título */
-    .title-container {
-      text-align: center;
-      margin-top: 28px; /* espaço adicional sob a topbar */
-      position: relative;
-      z-index: 2;
-    }
-    .title-container h1 {
-      font-size: 2.5em;
-      color: #4CAF50;
-      font-family: Arial, sans-serif;
-      margin: 0;
-      text-shadow: 1px 1px 2px #000000;
-    }
-
-    /* Grade de atividades */
+    /* Grade */
     .activity-buttons {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      gap: 20px;
-      max-width: 800px;
-      width: 100%;
-      justify-content: center;
-      align-items: start;
-      padding: 16px 20px 40px;
-      box-sizing: border-box;
+      display: grid; grid-template-columns: repeat(2, 1fr); gap: 20px;
+      max-width: 800px; width: 100%; justify-content: center; align-items: start;
+      padding: 16px 20px 40px; box-sizing: border-box;
     }
-    .activity-button,
-    .teacher-resources,
-    .robot-lex,
-    .hannah-video {
+    .activity-button, .teacher-resources, .robot-lex, .hannah-video {
       display: flex; justify-content: center; align-items: center;
       padding: 15px; background-color: #FFFFFF; border: 2px solid #4CAF50;
       border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-      text-decoration: none;
+      transition: transform 0.3s ease, box-shadow 0.3s ease; text-decoration: none;
     }
-    .activity-button img,
-    .teacher-resources img,
-    .robot-lex img,
-    .hannah-video img {
-      width: 100%; height: auto; max-width: 130px;
-    }
-    .activity-button:hover,
-    .teacher-resources:hover,
-    .robot-lex:hover,
-    .hannah-video:hover {
-      transform: scale(1.05); box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
-    }
-    .teacher-resources,
-    .robot-lex,
-    .hannah-video { grid-column: span 2; }
+    .activity-button img, .teacher-resources img, .robot-lex img, .hannah-video img { width: 100%; height: auto; max-width: 130px; }
+    .activity-button:hover, .teacher-resources:hover, .robot-lex:hover, .hannah-video:hover { transform: scale(1.05); box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3); }
+    .teacher-resources, .robot-lex, .hannah-video { grid-column: span 2; }
+    @media (max-width: 400px) { .teacher-resources, .robot-lex, .hannah-video { grid-column: span 1; } }
 
-    @media (max-width: 400px) {
-      .teacher-resources,
-      .robot-lex,
-      .hannah-video { grid-column: span 1; }
-    }
+    #linesSvg{ position: absolute; inset: 0; width: 100%; height: 100%; pointer-events: none; z-index: 0; display: block; }
 
-    /* SVG (se precisar futuramente) */
-    #linesSvg{
-      position: absolute; inset: 0;
-      width: 100%; height: 100%;
-      pointer-events: none; z-index: 0; display: block;
-    }
-
-    /* ====== ESTILO DESABILITADO (abre bloqueado e sem href) ====== */
+    /* ====== DESABILITADO ====== */
     .disabled-btn {
-      filter: grayscale(100%);
-      opacity: 0.55;
-      pointer-events: none;
-      cursor: not-allowed;
-      border-color: #999 !important;
-      box-shadow: none !important;
-      transform: none !important;
+      filter: grayscale(100%); opacity: 0.55; pointer-events: none; cursor: not-allowed;
+      border-color: #999 !important; box-shadow: none !important; transform: none !important;
     }
     .disabled-btn img { filter: grayscale(100%); }
   </style>
 </head>
 
 <body>
-  <!-- Barra superior: Back (esq) + Avatar+Nome (dir) -->
+  <!-- Topbar -->
   <div class="topbar">
     <a href="javascript:history.back()" class="back-button">Back</a>
-
     <div id="loginContainer" class="login-container">
       <a href="Formulario/login.html" id="loginLink" class="login-link">Login</a>
       <div id="userDropdown" class="user-dropdown"></div>
@@ -211,9 +115,7 @@
 
   <div class="map-container">
     <header>
-      <div class="title-container">
-        <h1>Select an Activity</h1>
-      </div>
+      <div class="title-container"><h1>Select an Activity</h1></div>
     </header>
 
     <main>
@@ -230,61 +132,51 @@
 
   <script>
   /* ==========
-     Utilidades: level/unit da URL
+     Level/Unit da URL (+ normalização para DB)
   ========== */
   const __pathParts = window.location.pathname.split("/");
   const __level = __pathParts[1] || "Level1";
   const __unit  = __pathParts[2] || "Unit1";
-  const normLU = s => s
-    .replace(/^level(\d+)$/i, 'Level$1')
-    .replace(/^unit(\d+)$/i,  'Unit$1');
+  const normLU = s => s.replace(/^level(\d+)$/i, 'Level$1').replace(/^unit(\d+)$/i, 'Unit$1');
   const __levelDB = normLU(__level);
   const __unitDB  = normLU(__unit);
 
   /* ==========
-     Helpers de criação e (des)bloqueio
-     - Criamos gated SEM href e PB; liberamos depois
+     Helpers: criação e (des)bloqueio
   ========== */
   function createGatedLink({ href, className, imgSrc, imgAlt, requiresPhase }) {
     const a = document.createElement("a");
     a.className = className + " disabled-btn";
-    a.dataset.href = href;                 // URL fica guardada aqui
+    a.dataset.href = href;
     if (requiresPhase) a.dataset.requiresPhase = String(requiresPhase);
-
     const img = document.createElement("img");
     img.src = imgSrc; img.alt = imgAlt;
     a.appendChild(img);
-
-    // Importante: não definimos a.href agora
-    return a;
+    return a; // sem href
   }
-
   function markDisabled(anchorEl, requiredPhase) {
     if (!anchorEl) return;
     anchorEl.classList.add("disabled-btn");
-    anchorEl.removeAttribute("href");      // garante que não navega
+    anchorEl.removeAttribute("href");
     anchorEl.setAttribute("aria-disabled", "true");
-    anchorEl.title = requiredPhase
-      ? `Liberado após concluir a fase ${requiredPhase}.`
-      : `Indisponível.`;
+    anchorEl.title = requiredPhase ? `Liberado após concluir a fase ${requiredPhase}.` : `Indisponível.`;
   }
-
   function markEnabled(anchorEl) {
     if (!anchorEl) return;
     const dh = anchorEl.dataset.href;
-    if (dh) anchorEl.href = dh;            // só no enable aplicamos href
+    if (dh) anchorEl.href = dh;
     anchorEl.classList.remove("disabled-btn");
     anchorEl.removeAttribute("aria-disabled");
     anchorEl.removeAttribute("title");
   }
 
   /* ==========
-     Construção dos botões
+     Construção dos botões (abre tudo travado exceto os livres)
   ========== */
   document.addEventListener("DOMContentLoaded", () => {
     const container = document.getElementById("activity-buttons");
 
-    // Hannah Video (sem gate)
+    // Hannah Video (sempre livre)
     const hannahVideo = document.createElement("a");
     hannahVideo.href = `/Atividades/HannahVideo/index.html?level=${__level}&unit=${__unit}`;
     hannahVideo.className = "activity-button hannah-video";
@@ -308,22 +200,17 @@
 
     buttonData.forEach(data => {
       const href = `/${__level}/${__unit}/fases.html?trecho=${data.trecho}`;
-
-      // trecho1 não é gated → já com href normal
       if (!data.requiresPhase) {
         const a = document.createElement("a");
         a.href = href;
         a.className = "activity-button";
         a.dataset.trecho = data.trecho;
-
         const img = document.createElement("img");
         img.src = data.img; img.alt = data.alt;
         a.appendChild(img);
         container.appendChild(a);
         return;
       }
-
-      // trecho2–6: gated (sem href inicialmente)
       const gated = createGatedLink({
         href,
         className: "activity-button",
@@ -335,7 +222,7 @@
       container.appendChild(gated);
     });
 
-    // Robô Lex (requer fase 27): gated
+    // Robô Lex (requer 27)
     const robotButton = createGatedLink({
       href: `../../Atividades/LEX/index.html?level=${__level}&unit=${__unit}`,
       className: "activity-button robot-lex",
@@ -348,15 +235,10 @@
   });
 
   /* ==========
-     Leitura de progresso (tenta múltiplos caminhos/formats)
-     Aceita:
-       - ultimaFaseLiberada: number
-       - lastUnlocked: number
-       - fasesLiberadas / liberadas / released / fases / unlocked: { [número]: true }
+     Leitura do progresso (agora entende chaves tipo "fase8")
   ========== */
   async function getUnlockedInfo(userId, levelDB, unitDB) {
     const db = firebase.database();
-
     const candidatePaths = [
       `/progresso/${userId}/${levelDB}/${unitDB}`,
       `/progress/${userId}/${levelDB}/${unitDB}`,
@@ -367,14 +249,20 @@
     let lastUnlocked = null;
     const unlockedSet = new Set();
 
+    // Extrai o primeiro número que aparecer na chave (ex.: "fase14" -> 14)
+    const keyToNumber = (k) => {
+      const m = String(k).match(/(\d+)/);
+      return m ? Number(m[1]) : NaN;
+    };
+
+    const truthy = (v) => (v === true || v === 1 || v === "true" || v === "True");
+
     const absorbPhaseObject = (obj) => {
       if (!obj || typeof obj !== 'object') return;
       Object.keys(obj).forEach(k => {
-        const n = Number(k);
+        const n = keyToNumber(k);
         const v = obj[k];
-        if (!Number.isNaN(n) && (v === true || v === 1 || v === "true")) {
-          unlockedSet.add(n);
-        }
+        if (!Number.isNaN(n) && truthy(v)) unlockedSet.add(n);
       });
     };
 
@@ -391,6 +279,10 @@
           lastUnlocked = Math.max(lastUnlocked ?? -Infinity, val.lastUnlocked);
         }
 
+        // Caso as fases estejam direto como "fase8: true", etc.
+        absorbPhaseObject(val);
+
+        // E também em sub-objetos comuns:
         absorbPhaseObject(val.fasesLiberadas);
         absorbPhaseObject(val.liberadas);
         absorbPhaseObject(val.released);
@@ -416,7 +308,6 @@
 
   async function applyStudentGates(userId, levelDB, unitDB) {
     const { lastUnlocked, unlockedSet } = await getUnlockedInfo(userId, levelDB, unitDB);
-
     const container = document.getElementById("activity-buttons");
     if (!container) return;
 
@@ -426,12 +317,11 @@
       const req    = a.dataset.requiresPhase;
       const kind   = a.dataset.kind;
 
-      // Controlamos trecho2..6 e robotLex
       if ((trecho === "trecho2" || trecho === "trecho3" || trecho === "trecho4" || trecho === "trecho5" || trecho === "trecho6") || kind === "robotLex") {
         if (req && !isPhaseSatisfied(req, lastUnlocked, unlockedSet)) {
-          markDisabled(a, req);   // mantém SEM href
+          markDisabled(a, req);
         } else {
-          markEnabled(a);         // aplica href a partir de data-href
+          markEnabled(a);
         }
       } else {
         // trecho1 e Hannah Video sempre liberados
@@ -441,7 +331,7 @@
   }
 
   /* ==========
-     Login + avatar + dropdown + roles + gates
+     Login + roles + gates
   ========== */
   firebase.auth().onAuthStateChanged(async (user) => {
     const loginLink = document.getElementById("loginLink");
@@ -457,78 +347,51 @@
 
       loginLink.innerHTML = "";
       loginLink.removeAttribute("href");
-
       const img = document.createElement("img");
-      img.src = avatar;
-      img.alt = "User Avatar";
-      img.className = "user-icon";
+      img.src = avatar; img.alt = "User Avatar"; img.className = "user-icon";
       img.onerror = () => { img.src = "../../imagens/bonecologin1.png"; };
-
-      const p = document.createElement("p");
-      p.className = "user-name";
-      p.textContent = displayName;
-
+      const p = document.createElement("p"); p.className = "user-name"; p.textContent = displayName;
       loginLink.append(img, p);
 
-      // Dropdown (sem Leave) com caminhos corrigidos
       userDropdown.innerHTML = `
         <a href="../../painel_aluno.html" class="dropdown-item">🧭 Student Dashboard</a>
         <a href="../../index.html" class="dropdown-item">🔁 Select a New Level</a>
         <a href="../index.html" class="dropdown-item">🔄 Select a New Unit</a>
       `;
+      loginLink.onclick = (e) => { e.preventDefault(); userDropdown.style.display = userDropdown.style.display === "flex" ? "none" : "flex"; };
+      window.addEventListener("click", (e) => { if (!loginLink.contains(e.target)) userDropdown.style.display = "none"; });
 
-      // Toggle dropdown
-      loginLink.onclick = (e) => {
-        e.preventDefault();
-        userDropdown.style.display = userDropdown.style.display === "flex" ? "none" : "flex";
-      };
-      window.addEventListener("click", (e) => {
-        if (!loginLink.contains(e.target)) userDropdown.style.display = "none";
-      });
-
-      // Role & gates
       const role = dados.role || null;
       if (role === "professor" || role === "proprietario") {
         const tr = document.querySelector(".teacher-resources");
         if (tr) tr.style.display = "flex";
-        // Libera tudo para professor/proprietário
         document.querySelectorAll(".activity-button, .robot-lex, .hannah-video").forEach(a => markEnabled(a));
       } else if (role === "aluno") {
-        // Teacher Resources oculto para aluno (mantém padrão)
-        // Aplica as travas somente para aluno (abre bloqueado; libera conforme progresso)
-        try {
-          await applyStudentGates(user.uid, __levelDB, __unitDB);
-        } catch (e) {
-          console.warn("Falha ao aplicar travas de aluno:", e?.message);
-        }
+        try { await applyStudentGates(user.uid, __levelDB, __unitDB); }
+        catch (e) { console.warn("Falha ao aplicar travas de aluno:", e?.message); }
       } else {
-        // Role desconhecido: comportamento padrão (não habilita Teacher Resources)
-        // Mantém gated até sabermos progresso — opcional liberar trecho1/Video:
+        // Role desconhecido: libera apenas o que é sempre livre
         document.querySelectorAll(".hannah-video, [data-trecho='trecho1']").forEach(a => markEnabled(a));
       }
 
     } else {
-      // Usuário não logado
       loginLink.textContent = "Login";
       loginLink.href = "Formulario/login.html";
-      // Sem login, não liberamos gates (previne "aluno rápido")
+      // Sem login, mantemos travado (seguro)
     }
   });
 
-  // Listener adicional para manter compat com lógica original de exibir Teacher Resources
+  // Compat: mostrar Teacher Resources se professor/proprietário
   firebase.auth().onAuthStateChanged((user) => {
     if (user) {
-      const userId = user.uid;
-      const userRoleRef = firebase.database().ref(`/usuarios/${userId}/role`);
+      const userRoleRef = firebase.database().ref(`/usuarios/${user.uid}/role`);
       userRoleRef.once("value").then((snapshot) => {
         const role = snapshot.val();
         if (role === "professor" || role === "proprietario") {
           const tr = document.querySelector(".teacher-resources");
           if (tr) tr.style.display = "flex";
         }
-      }).catch((error) => {
-        console.error("Erro ao obter o role do usuário:", error);
-      });
+      }).catch((error) => console.error("Erro ao obter role:", error));
     }
   });
   </script>
