--- a/Level0/Unit1/teacher/index.html
+++ b/Level0/Unit1/teacher/index.html
@@ -320,13 +320,13 @@
         <div id="bibleActivityContent" class="formatted-text"></div>
     </div>
 
-    <!-- Choose an Activity -->
+    <!-- Choose a Complementary Activity -->
     <h2>Choose an Activity</h2>
     <div class="activities">
+        <a href="Colorir/index.html"><img src="../../../imagens/botoes/color_button.png" alt="Color Activity"></a>
         <a href="Fine Motor Skills/index.html"><img src="../../../imagens/botoes/Fine_Motor_Skills_Button.png" alt="Fine Motor Skills"></a>
         <a href="Missing Letter/index.html"><img src="../../../imagens/botoes/missing_letter_button.png" alt="Missing Letter"></a>
-        <a href="Mixed Letters/index.html"><img src="../../../imagens/botoes/mixed_letters_button.png" alt="Mixed Letters"></a>
-        <a href="Colorir/index.html"><img src="../../../imagens/botoes/color_button.png" alt="Color Activity"></a>
+        <a href="Mixed Letters/index.html"><img src="../../../imagens/botoes/mixed_letters_button.png" alt="Mixed Letters"></a>        
     </div>
 
     <script>
