--- a/Level0/Unit1/teacher/index.html
+++ b/Level0/Unit1/teacher/index.html
@@ -321,7 +321,7 @@
     </div>
 
     <!-- Choose a Complementary Activity -->
-    <h2>Choose an Activity</h2>
+    <h2>Choose a Complementary Activity</h2>
     <div class="activities">
         <a href="Colorir/index.html"><img src="../../../imagens/botoes/color_button.png" alt="Color Activity"></a>
         <a href="Fine Motor Skills/index.html"><img src="../../../imagens/botoes/Fine_Motor_Skills_Button.png" alt="Fine Motor Skills"></a>
