--- a/Atividades/StoryCards/index.html
+++ b/Atividades/StoryCards/index.html
@@ -243,7 +243,7 @@
                 window.history.back();
             } else {
                 const confirmExit = confirm(
-                    "The next phase is not completed. Do you wish to leave anyway?"
+                    "The next phase is not completed.\n\nTo complete this phase, you must view and listen to ALL story cards (open each card and play the audio to the end).\n\nDo you wish to leave anyway?"
                 );
                 if (confirmExit) {
                     console.log("User chose to leave without completing the phase. Going back.");
