--- a/Atividades/Flashcards2/index.html
+++ b/Atividades/Flashcards2/index.html
@@ -451,7 +451,7 @@ function checkCompletion() {
                         window.history.back();
                     } else {
                         const confirmExit = confirm(
-                            "You have not completed this phase. Do you want to go back anyway?"
+                            "You have not completed this phase.\n\nTo complete it, flip ALL flashcards (front/back) and play the audio on EACH card until it finishes.\n\nDo you want to go back anyway?"
                         );
                         if (confirmExit) {
                             window.history.back();
