--- a/Atividades/Dialogo/index.html
+++ b/Atividades/Dialogo/index.html
@@ -264,7 +264,7 @@
                 console.log(`Next phase (fase${nextPhase}) is unlocked. Navigating back.`);
                 window.history.back(); // Retorna para a página anterior
             } else {
-                const confirmNavigation = confirm("The current phase has not been completed. Are you sure you want to leave?");
+                const confirmNavigation = confirm("The current phase has not been completed.\n\nTo finish, listen to BOTH lines (Robot and Student) in EVERY dialogue block. Use the Back/Forward buttons to navigate and play the audio on each line until it finishes.\n\nAre you sure you want to leave?");
                 if (confirmNavigation) {
                     window.history.back(); // Retorna para a página anterior
                 } else {
